Bug 689574 - italic/oblique fonts produce incorrect page orientation
Summary: italic/oblique fonts produce incorrect page orientation
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PDF Writer (show other bugs)
Version: 8.15
Hardware: PC Linux
: P4 normal
Assignee: Ray Johnston
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-11-23 09:26 UTC by Bob T.
Modified: 2009-03-26 11:23 UTC (History)
1 user (show)

See Also:
Customer:
Word Size: ---


Attachments
uses normal Roman as default (100.16 KB, application/postscript)
2007-11-23 09:27 UTC, Bob T.
Details
uses "italic" (oblique) as default (100.18 KB, application/postscript)
2007-11-23 09:28 UTC, Bob T.
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bob T. 2007-11-23 09:26:15 UTC
If I switch from an (upright) text font to italic
or oblique fonts, the pdfwriter gets confused and doesn't recognize
landscape mode. I'll attach two Postscript files that are essentially identical
except one uses normal Roman and the other uses italic as the default. 
When ps2pdf is applied to these, the outputs have different
orientations (as observed in xpdf, acroread, kpdf, ... ).
Comment 1 Bob T. 2007-11-23 09:27:49 UTC
Created attachment 3577 [details]
uses normal Roman as default
Comment 2 Bob T. 2007-11-23 09:28:43 UTC
Created attachment 3578 [details]
uses "italic" (oblique) as default
Comment 3 Bob T. 2007-11-23 12:46:05 UTC
I built 8.61 and its pdfwrite recognizes landscape when italic fonts are the
default, but the document produced is upside-down!
Comment 4 Hin-Tak Leung 2007-11-26 15:37:21 UTC
ghostscript has some logic for 'guessing' the correct orientation by looking
at the predominant text direction, but it may occasionally get it wrong with
strange fonts (e.g. one which declares itself to be a symbol font, I think).
I haven't tried with your files so I cannot confirm your report; but
the actual page orientation can be specified manually when the auto-rotation
does not do what you want - see the documentation of ps2pdf in the ghostscript
doc directory.
Comment 5 Bob T. 2007-11-26 16:08:02 UTC
> the actual page orientation can be specified manually when the auto-rotation
does not do what you want

But not if ps2pdf is called in a script and the pdf viewer doesn't have rotation
commands on the grounds that it's the pdf-generator's responsibility to get the
orientation right (e.g., kpdf).  I've written a script that looks for
"Orientation: Landscape" and does the right thing *before* ps2pdf.  Why can't
ps2pdf do the right thing?  The assumption seems to be that Distiller must at
all costs be emulated, even if it's an obvious bug.

I'm not using a "strange" font or a symbol font; just an italic font.  
Comment 6 Ken Sharp 2009-03-23 08:36:34 UTC
Fixed in revision 9582, patch here:

http://ghostscript.com/pipermail/gs-cvs/2009-March/009156.html
Comment 7 Bob T. 2009-03-26 11:23:10 UTC
The patch works for me.  Thanks.