Fix (pdfwrite) : Wrong page orientation with italic font.

DETAILS :

Patch and log message submitted by Leonardo.

Bug 689574 "italic/oblique fonts produce incorrect page orientation".

Replacing text orientation recognition trick with a right math.

ref# leo2072.

EXPECTED DIFFERENCES :

None.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@9582 a1074d23-0009-0410-80fe-cf8c14f379e6